data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2118.wast
;; 9. **Test 9: Loop with Inter-dependent Operand Checks**    - A loop within a block that continuously branches (`br_if`) based on inter-dependent stack operand checks, maintaining a complex condition matrix.    - Tests if operands are correctly evaluated in relation to each other to ensure loop is not stuck in infinite condition.

(assert_invalid
  (module (func $inter_dependent_loop (param i32) (result i32)
    (block $outer (loop $inner (param i32) (result i32)
      (i32.const 1)
      (i32.const 2)
      (i32.add)
      (tee_local 0)
      (i32.eqz)
      (br_if $inner)
    ))
  ))
  "type mismatch"
)